cargo-desugar/tests/ui/pat-param.out
error[E0282]: type annotations needed
  --> tests/ui/pat-param.desugared.rs:19:25
   |
19 |     a_3 + b_4 + (x_8 as _)
   |                         ^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
